update readmore post

--- a/blog/2020-04-27/index.mdx
+++ b/blog/2020-04-27/index.mdx
@@ -138,4 +138,4 @@ I hope you found that interesting, informative, and entertaining. I would be mor
 
 If you think other people should read this post. Tweet, share and [Follow me on twitter](https://twitter.com/ElaziziYoussouf) for the next articles.
 
-> **Reac More 👉 [Forms in React Native, The right way](https://elazizi.com/forms-in-react-native-the-right-way)**
+> **Reac More 👉 [GraphQL: Front-End Superpower](https://elazizi.com/graph-ql-front-end-superpower)**
