--- a/blog/2020-04-27/index.mdx
+++ b/blog/2020-04-27/index.mdx
@@ -13,7 +13,7 @@ Most questions people ask me on RN were not related to fundamental or advanced s
 
 Hey Youssouf what is the best library to handle XXXXX ( XXXXX here can be authentication, forms, API call…)
 
-In today's article, I will try to collect the best dependencies and libraries I use on almost every react native project I worked on that I think you should give a try.
+In today's article, I will try to collect the best dependencies and libraries I use on almost every react native project I worked on and I think you should give a try.
 
 > This list can be useful for reactjs dev too.
 
