--- a/blog/2020-04-27/index.mdx
+++ b/blog/2020-04-27/index.mdx
@@ -9,7 +9,7 @@ banner: "./package.png"
 
 Having fundamental and advanced skills in the development field is important for sure to create height quality applications and find solutions for challenges, but it is not enough. I want to highlight an aspect that people mostly forget in their learning path despite that it is very important. This aspect is about having the overview of your stack ecosystems( libraries and tools) in your field, having this skill will help you decide the best package or tools you need to use for every situation you have.
 
-Most questions people ask me on RN were not related to fundamental or advanced staff, I noticed that most of them are in the following format.
+Most questions people ask me on RN were not related to fundamental or advanced stuff, I noticed that most of them are in the following format.
 
 Hey Youssouf what is the best library to handle XXXXX ( XXXXX here can be authentication, forms, API call…)
 
@@ -110,7 +110,7 @@ Check this complete tutorial about [patch-package by the amazing @benawad](https
 
 For end-to-end testing, I can recommend using [Detox from Wix](https://github.com/wix/Detox) As a solution to automate end to end tests for your application using javascript. To be honest I faced some issues setting up the library but I think it is the best choice we have at least for now.
 
-# Warp up
+# Wrap up
 
 This is My complte list 👇
 
