--- a/blog/2020-05-06/index.mdx
+++ b/blog/2020-05-06/index.mdx
@@ -1,6 +1,6 @@
 ---
 date: 2020-05-06
-title: "Handling Errors in React Native: A Complete Guide."
+title: "Handling Errors in React Native: A Complete Guide"
 categories: ["react", "react-native"]
 published: true
 keywords: ["react", "react-native-erros", "error-boundry", "sentry"]
@@ -26,7 +26,7 @@ As I already mentioned React Native has two sides, Javascript and Native, this f
 
 ![](https://media.giphy.com/media/3o7TKUM3IgJBX2as9O/giphy.gif)
 
-# JS Exception:
+# JS Exception
 
 In general, javascript is not hard regarding error handling, and a try/catch is great but it only works for imperative code. However, React components are declarative (specify what should be rendered) which means you can't use a try-catch for react components errors.
 
@@ -139,7 +139,7 @@ setNativeExceptionHandler(
 );
 ```
 
-# Tracking Exceptions.
+# Tracking Exceptions
 
 Handling exceptions without tracking them has no sense because all the solutions we discussed only improve the user experience and give more information to the user about the error instead of a white screen or an app crash.
 
