🔥  react native project structure post

--- a/blog/2020-05-06/index.mdx
+++ b/blog/2020-05-06/index.mdx
@@ -168,4 +168,6 @@ I hope you found that interesting, informative, and entertaining. I would be mor
 
 If you think other people should read this post. Tweet, share and [Follow me on twitter](https://twitter.com/ElaziziYoussouf) for the next articles.
 
+> **Reac More 👉 [How to structure a react-native project](https://elazizi.com/how-to-structure-a-react-native-project)**
+
 > **Reac More 👉 [17 React Native libraries you should use in 2020](https://elazizi.com/17-react-native-libraries-you-should-use-in-2020)**
