--- a/blog/2020-12-20-typescript-react/index.mdx
+++ b/blog/2020-12-20-typescript-react/index.mdx
@@ -15,7 +15,7 @@ It’s been a year now when i start using typescript for my react and react-nati
 
 This article reflects precisely my way of learning new technologies. I usually start watching videos to make sure I will have a global vision of what i am trying to learn. I typically don’t care about practice in this step, and i watch multiple videos from different sources. When I feel confident I have an overview, I jump directly to official docs or use some good GitHub repo cheatsheets and start practicing on my projects.
 
-[](https://media.giphy.com/media/3oEduYKjPVbx6vHiJW/source.gif)
+![lets Go ](https://media.giphy.com/media/3oEduYKjPVbx6vHiJW/source.gif)
 
 # 1. Overview
 
