--- a/blog/2020-12-20-typescript-react/index.mdx
+++ b/blog/2020-12-20-typescript-react/index.mdx
@@ -21,7 +21,7 @@ This article reflects precisely my way of learning new technologies. I usually s
 
 In this step, our goal is to have an overview of typescript with react, what we can do, and how.
 
-There is no one better than the fantastic ben award to give you a fast and strict point overview about what you are trying to learn. [Ben had a great tutorial about how to start using Typescript](https://www.youtube.com/watch?v=Z5iWr6Srsj8&t=86s&ab_channel=BenAwad) in your react code. Typing for props, hooks, and render props. A perfect video to have an overview about react with typescript.
+There is no one better than the fantastic Ben Awad to give you a fast and strict point overview about what you are trying to learn. [Ben had a great tutorial about how to start using Typescript](https://www.youtube.com/watch?v=Z5iWr6Srsj8&t=86s&ab_channel=BenAwad) in your react code. Typing for props, hooks, and render props. A perfect video to have an overview about react with typescript.
 
 Also, I would recommend reading [the typescript section on the official react docs](https://reactjs.org/docs/static-type-checking.html#typescript).
 
@@ -47,7 +47,7 @@ In the last couple of months, and to evaluate my skill in a real challenge, I st
 
 Steps to learn typescript for reactjs :
 
-- [An overview from official docs ](https://reactjs.org/docs/static-type-checking.html#typescript) & [Ben award tutorial about typescript](https://www.youtube.com/watch?v=Z5iWr6Srsj8&t=86s&ab_channel=BenAwad)
+- [An overview from official docs ](https://reactjs.org/docs/static-type-checking.html#typescript) & [Ben Awad tutorial about typescript](https://www.youtube.com/watch?v=Z5iWr6Srsj8&t=86s&ab_channel=BenAwad)
 - [React typescript cheatsheets.](https://github.com/typescript-cheatsheets/react)
 - [Typescript challenge](https://github.com/type-challenges/type-challenges)
 - Open source contribution
