fix all blog posts

--- a/src/content/blog/2017-03-28.md
+++ b/src/content/blog/2017-03-28.md
@@ -4,9 +4,11 @@ title: "[List] Atom Setup for your next react project !!"
 tags: ["react"]
 keywords: ["react", "dev", "atom"]
 published: true
-ogImage: "./banner.png"
+description: "Atom Setup for your next react project !!"
+ogImage: /images/2017-03-28_banner.png
 ---
 
+![banner](/images/2017-03-28_banner.png)
 I discovered Medium six months ago and I fell in love with these amazing stories and all these writers around the world. In this period I read 3 to 5 posts in a day, I follow more people every day and this habit helps me to improve my experience in software development and exactly building stuff using JavaScript and reactjs library.
 
 Reading all these articles also has improved my English skill, so I decided to write my first post on medium yeeep !!! :).Yet I’m not a native English speaker, so feel free to point out grammatical and/or syntactical errors :).
