--- a/src/content/blog/2017-04-03.md
+++ b/src/content/blog/2017-04-03.md
@@ -1,9 +1,10 @@
 ---
 pubDatetime: 2017-04-03
 title: "A step-by-step guide to making pure-CSS tooltips"
-tags: ["css", "web"]
-keywords: ["css", "animation", "tooltip"]
+tags: ["CSS", "web"]
+keywords: ["CSS", "animation", "tooltip"]
 published: true
+description: "A step-by-step guide to making pure-CSS tooltips, Understand these CSS tricks so you can make pure-CSS tooltips, too."
 ---
 
 ![](https://cdn-images-1.medium.com/max/800/1*8RpaP4J1KI-RaxdIdMXHNg.gif)
