--- a/src/content/blog/2017-06-03.md
+++ b/src/content/blog/2017-06-03.md
@@ -4,8 +4,11 @@ title: "Frontend Performance Check-list For Production"
 tags: ["web"]
 keywords: ["front-end", "Performance", "checklist"]
 published: true
-ogImage: "./banner.png"
+description: "In web development and exactly front-end web, we spend more time searching for the best design and content to our pages, it’s good but we miss to optimize our web pages."
+ogImage: /images/og-images/2017-06-03_banner.png
 ---
+
+![](/images/2017-06-03_banner.png)
 
 In web development and exactly front-end web, we spend more time searching for the best design and content to our pages, it’s good but we miss to optimize our web pages.
 
