--- a/src/content/blog/2017-11-05.md
+++ b/src/content/blog/2017-11-05.md
@@ -4,8 +4,11 @@ title: "A step by step guide to setup PHP (Laravel) environment (Linux)."
 tags: ["web", "dev"]
 keywords: ["laravel", "php", "linux"]
 published: true
-ogImage: "./banner.png"
+description: "This article is a step by step tutorial to get started with PHP and laravel in Linux environment ( Ubuntu ). By installing Apache2, Mysql and PHP, your LAMP server is ready to host your PHP application."
+ogImage: /images/2017-11-05_banner.png
 ---
+
+![](/images/2017-11-05_banner.png)
 
 This article is a step by step tutorial to get started with PHP and laravel in Linux environment ( Ubuntu ). By installing Apache2, Mysql and PHP, your LAMP server is ready to host your PHP application.
 
