--- a/src/content/blog/2017-11-16.md
+++ b/src/content/blog/2017-11-16.md
@@ -3,9 +3,12 @@ pubDatetime: 2017-11-16
 title: "Laravel & Docker, Zero config with Vessel"
 tags: ["web", "dev"]
 keywords: ["dev,laravel,php"]
-ogImage: "./banner.png"
+ogImage: /images/2017-11-16_banner.png
 published: true
+description: "This article is a step-by-step to get started with Vessel ( the new way to setup the Laravel setup config with docker)."
 ---
+
+![](/images/2017-11-16_banner.png)
 
 > This article is a step-by-step to get started with Vessel ( the new way to setup the Laravel setup config with docker).
 
