--- a/src/content/blog/2018-02-02.md
+++ b/src/content/blog/2018-02-02.md
@@ -4,6 +4,8 @@ title: "Introducing reactjs-popup 🎉 (3kb)—React popup, Modals, Tooltips and
 tags: ["web", "react"]
 keywords: ["react", "react-popup", "react-modal"]
 published: true
+description: "Introducing reactjs-popup 🎉 (3kb)—React popup, Modals, Tooltips and Menus — All in one"
+ogImage: https://cdn-images-1.medium.com/max/800/1*x-TqQwyT2ADmnb51oRJCOg.gif
 ---
 
 ![](https://cdn-images-1.medium.com/max/800/1*x-TqQwyT2ADmnb51oRJCOg.gif)
