--- a/src/content/blog/2018-03-06.md
+++ b/src/content/blog/2018-03-06.md
@@ -3,9 +3,12 @@ pubDatetime: 2018-03-06
 title: "React tools you need to use in your components development"
 tags: ["web", "react"]
 keywords: ["react", "tools", "web dev"]
-ogImage: "./banner.png"
+ogImage: /images/2018-03-06_banner.png
 published: true
+description: "React tools you need to use in your components development"
 ---
+
+![](/images/2018-03-06_banner.png)
 
 As a react developer, I believe that everyone who is working on a react project must develop all the components separately for taking advantage from that components philosophy behind this amazing front end framework.
 
