--- a/src/content/blog/2018-03-11.md
+++ b/src/content/blog/2018-03-11.md
@@ -4,6 +4,8 @@ title: "Create a fancy burger menu using reactjs-popup"
 tags: ["react", "web"]
 keywords: ["react", "react-popup", "react-modal", "burger menu"]
 published: true
+description: "Create a fancy burger menu using reactjs-popup"
+ogImage: https://cdn-images-1.medium.com/max/800/1*ttcLA5BrtUAXSBo6YfoQoA.gif
 ---
 
 > This article is a step by step tutorial to create a simple burger menu for your website by using reactjs-popup
