--- a/src/content/blog/2018-04-04.md
+++ b/src/content/blog/2018-04-04.md
@@ -1,11 +1,14 @@
 ---
 pubDatetime: 2018-04-04
 title: "How to create your own auto direct message Twitter bot for free 💬"
-tags: ["bot", "twitter"]
-keywords: ["bot", "twitter"]
+tags: ["bot", "Twitter"]
+keywords: ["bot", "Twitter"]
 published: true
-ogImage: "./banner.png"
+ogImage: /images/2018-04-04_banner.png
+description: "I will introduce my own Twitter bot that I built to send a welcome message to my new followers on Twitter. I’ll also show you how it has worked very well for me for six months."
 ---
+
+![](/images/2018-04-04_banner.png)
 
 Creating a welcome message for your new followers in Twitter is the first step to getting more people to engage with your tweets and links. As you might know, there are many online services that help you send auto direct messages (DMs) to your new followers. But I think it’s crazy how online services charge between $5 to$15 for a simple tool that creates bots, when you can build your own for free.
 
