--- a/src/content/blog/2019-03-17.md
+++ b/src/content/blog/2019-03-17.md
@@ -5,8 +5,11 @@ tags: ["react-native"]
 published: true
 keywords:
   ["react", "react-native", "react-native-navigation", "react-navigation"]
-ogImage: "./banner.png"
+ogImage: /images/2019-03-17_banner.png
+description: "we will take a look at the possible solutions to make the best navigation experience for users and developers too. We will discuss the most popular solutions and help you make the right choice."
 ---
+
+![](/images/2019-03-17_banner.png)
 
 If you ever had a chance to program a mobile app, you would have probably noticed that there are two major components that are mostly used: “Lists” and “navigation”. Therefore, mastering those two components is quite crucial in a way that they will spare you many challenging problems during your programming. Eventually, they will ensure delivering a friendly mobile app.
 
