--- a/src/content/blog/2019-06-25.md
+++ b/src/content/blog/2019-06-25.md
@@ -4,8 +4,11 @@ title: Create React Modal with 22 lines of code
 tags: ["react"]
 published: true
 keywords: ["react", "react-modal", "modal"]
-ogImage: "./banner.png"
+ogImage: /images/2019-06-25_banner.png
+description: "Create React Modal with 22 lines of code"
 ---
+
+![](/images/2019-06-25_banner.png)
 
 Nowadays, Modals are one of the most used components in React Application, having an easy way to create React Modals will help you sheep Modals related features fast in your upcoming React Applications.
 In this tutorial, we will build A simple React Modal using only 22 lines of code.
