--- a/src/content/blog/2019-07-28.md
+++ b/src/content/blog/2019-07-28.md
@@ -4,8 +4,11 @@ title: "The power of Serverless : Part 1"
 tags: ["react", "serverless"]
 published: true
 keywords: ["react", "serverless", "netlify", "auth0", "FaunaDB"]
-ogImage: "./banner.png"
+ogImage: /images/2019-07-28_banner.png
+description: "In this article, I will share with you a step-by-step from search to launch on how you can build complex logic apps using Serverless services and your brain."
 ---
+
+![](/images/2019-07-28_banner.png)
 
 Nowadays, for sure you have heard of Serverless and how this new hype can help you build applications fast and almost for free for small ones, which the case for most side projects you are trying to build.
 
