--- a/src/content/blog/2019-09-06.md
+++ b/src/content/blog/2019-09-06.md
@@ -4,8 +4,11 @@ title: "React Native news from last week"
 tags: ["react", "react-native"]
 published: true
 keywords: ["react", "react-native", "formik"]
-ogImage: "./banner.jpg"
+ogImage: /images/news_banner.jpg
+description: "This is a small post that covers almost all news and announcements from the last week."
 ---
+
+![](/images/news_banner.jpg)
 
 Last week was a great week for the react-native ecosystem. we saw some great announcements form react-native Europe and core team members that would make react native development more enjoyable.
 
