--- a/src/content/blog/2020-03-01.md
+++ b/src/content/blog/2020-03-01.md
@@ -4,8 +4,11 @@ title: "GatsbyJs Showcase: Contributors List For Open source Project"
 tags: ["react", "Gatsby"]
 published: true
 keywords: ["react", "GatsbyJs", "js"]
-ogImage: "./banner.png"
+ogImage: /images/2020-03-01_banner.png
+description: "This article is a GatsbyJs showcase on how we can add a contributors list to any community project website."
 ---
+
+![](/images/2020-03-01_banner.png)
 
 Today I am sharing my journey developing a new Geeksblabla feature. Meanwhile, I think it would be the perfect way to share my passion using GatsbyJs and how I can always find a solution for my challenges using GatsbyJs APIs. This article is a GatsbyJs showcase on how we can add a contributors list to any community project website.
 
