--- a/src/content/blog/2020-03-27.md
+++ b/src/content/blog/2020-03-27.md
@@ -4,8 +4,11 @@ title: "Forms in React Native, The right way"
 tags: ["react", "react-native"]
 published: true
 keywords: ["react", "react-native", "form", "react-hook-form"]
-ogImage: "./form-in-react-native.png"
+ogImage: "/images/form-in-react-native.png"
+description: "This article is a step-by-step tutorial to create a generic form component that can be used whenever you need to deal with forms."
 ---
+
+![form-in-react-native](/images/form-in-react-native.png)
 
 > Updated 06/04/2021 : adding select input and date picker
 
