--- a/src/content/blog/2020-04-04.md
+++ b/src/content/blog/2020-04-04.md
@@ -4,8 +4,11 @@ title: "GraphQL: Front-End Superpower "
 tags: ["GraphQL", "front-end"]
 published: true
 keywords: ["GraphQL", "front-end", "react", "javascript"]
-ogImage: "./super-power.jpeg"
+ogImage: "/images/super-power.jpeg"
+description: "GraphQL is a query language for API and runtime for fulfilling those queries with your existing data. In simple words, GraphQL is a syntax or a specification that describes how to request your data."
 ---
+
+![](/images/super-power.jpeg)
 
 Back to 2013 when people start using Facebook Graph API to build their Apps. I remember reading some articles and comments on how people were surprised by the API interface and how it is easy-to-use.
 
