--- a/src/content/blog/2020-04-12.md
+++ b/src/content/blog/2020-04-12.md
@@ -5,8 +5,11 @@ tags: ["react", "react-native"]
 published: true
 keywords:
   ["react", "react-native", "react-navigation", "javascript", "animation"]
-ogImage: "./flip.jpeg"
+ogImage: "/images/flip.jpeg"
+description: "Implementing Spotify Login Animation With React Navigation V5"
 ---
+
+![Spotify Login Animation With React Navigation V5](/images/flip.jpeg)
 
 If you are using Spotify mobile application to listen to your favorites music, for sure you noticed the great and smooth login animation.
 
