--- a/src/content/blog/2020-04-27.md
+++ b/src/content/blog/2020-04-27.md
@@ -4,8 +4,11 @@ title: "17 React Native libraries you should use in 2020"
 tags: ["react", "react-native"]
 published: true
 keywords: ["react", "react-native", "react-navigation", "tools", "forms"]
-ogImage: "./package.png"
+ogImage: "/images/package.png"
+description: "In this article, I will try to collect the best dependencies and libraries I use on almost every react native project I worked on and I think you should give a try."
 ---
+
+![](/images/package.png)
 
 Having fundamental and advanced skills in the development field is important for sure to create height quality applications and find solutions for challenges, but it is not enough. I want to highlight an aspect that people mostly forget in their learning path despite that it is very important. This aspect is about having the overview of your stack ecosystems( libraries and tools) in your field, having this skill will help you decide the best package or tools you need to use for every situation you have.
 
