--- a/src/content/blog/2020-05-06.md
+++ b/src/content/blog/2020-05-06.md
@@ -4,8 +4,11 @@ title: "Handling Errors in React Native: A Complete Guide"
 tags: ["react", "react-native"]
 published: true
 keywords: ["react", "react-native-erros", "error-boundry", "sentry"]
-ogImage: "./error.jpg"
+ogImage: "/images/error.jpg"
+description: "This article will guide you through some techniques and tools to catch these unhandled exceptions, perform tasks to provide the best experience for users, and report these errors to make sure you are going to fix them on the next release."
 ---
+
+![](/images/error.jpg)
 
 One of the fundamental skills you need to learn in your development field is to learn how to deal with unthought errors. As a react native developer, shipping a new application with a high percentage bugs-free is a little bit challenging.
 
