--- a/src/content/blog/2018-09-21.md
+++ b/src/content/blog/2018-09-21.md
@@ -4,8 +4,11 @@ title: "The missing piece in the beginner’s guides : React Native"
 tags: ["react-native"]
 keywords: ["react", "react-native", "mobile dev"]
 published: true
-ogImage: "./banner.png"
+ogImage: /images/2018-09-21_banner.png
+description: "This article is for every developer with React web background. It is basically about how to start building apps with React Native."
 ---
+
+![](/images/2018-09-21_banner.png)
 
 > **This article was originally published on the** [**Obytes blog**](https://www.obytes.com/blog/)**.**
 
