fix netlify build

--- a/src/content/blog/2019-07-28.md
+++ b/src/content/blog/2019-07-28.md
@@ -50,7 +50,7 @@ One of the most requested features is adding a new page where people can suggest
 - Our Brain.
 - Suggest page design.
 
-![](./suggest_blabla.png)
+![](/images/suggest_blabla.png)
 
 <br/>
 
@@ -109,7 +109,7 @@ Taking some time to search for the best resource using css-trick serverless reso
 - We need an admin panel to validate submission before they appear in the suggestion list.
 - App architecture draft
 
-![](./banner.png)
+![](/images/2019-07-28_banner.png)
 <b/>
 
 > **In the next part we will jump into the coding part and understanding the whole architecture, stay tunned.**
