--- a/src/content/blog/2020-03-01.md
+++ b/src/content/blog/2020-03-01.md
@@ -138,7 +138,7 @@ exports.sourceNodes = async ({
 
 Restart the server and if everything works as expected you should see the `allContributor` query in the graphQl playground with the correct contributor’s list.
 
-![](./allcontributor_query.png)
+![](/images/allcontributor_query.png)
 
 > GraphQl Playground
 
@@ -202,13 +202,13 @@ To see the workflow in Actions, We are Going to choose a contribution from Moham
 
 **Step 1** : Comment to pull Request and ask @all-Contributor to add @bondif to the contributors’ list. @all-contributor bot will reply to my comment with a link to the new PR.
 
-![Step1](./step1.png)
+![Step1](/images/step1.png)
 
 > Comment
 
 **Step 2** : Netlify preview will deploy a preview version of our website. We just need to Make sure our new contributor has been added to the contributors’ section.
 
-![Step2](./step2.png)
+![Step2](/images/step2.png)
 
 > PR with Netlify preview
 
