--- a/src/content/blog/2020-04-04.md
+++ b/src/content/blog/2020-04-04.md
@@ -58,7 +58,7 @@ Take as an example, we are building a posts feed page and we need to show users 
 
 With GraphQL we can simply retrieve all the data at once using a simple query:
 
-```gql
+```graphql
 {
   allPosts {
     content
